格式修正